--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <p>Busco crecer como profesional en el mundo tecnológico, aprendiendo de cada experiencia y proyecto para construir una carrera estable y con propósito. Aspiro a alcanzar un alto nivel en desarrollo web y tecnologías financieras, combinando la formación continua con la práctica real. A largo plazo, quiero conseguir una posición destacada que me permita generar valor, estabilidad y libertad económica, con la visión de emprender mi propio proyecto o empresa tecnológica.</p>
       <div class="cards">
         <div class="card">
-          <h3>Formación</h3>
+          <h3>Formación Oficial</h3>
           <p>CFGM Sistemas Microinformáticos y Redes — Centre d’Estudis Politècnics Barcelona (2023 - 2025)</p>
           <p>CFGS Desarrollo de Aplicaciones Web — Centre d’Estudis Politècnics Barcelona (2025 - Cursando)</p>
         </div>
