--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
         <a href="#projects">Proyectos</a>
         <a href="#skills">Habilidades</a>
         <a href="#competencias">Competencias</a>
-        <a href="#contact">Contacto</a>
         <button id="theme-toggle" aria-label="Alternar modo claro/oscuro">🌙</button>
       </nav>
     </div>
@@ -33,7 +32,7 @@
           <p><strong>Ubicación:</strong> Torrelavit, Barcelona • <strong>Edad:</strong> 19 años</p>
           <div class="ctas">
             <a class="btn" href="CV_2.0.pdf" target="_blank" rel="noopener">Ver CV (PDF)</a>
-            <a class="btn ghost" href="#contact">Contactar</a>
+            <a class="btn ghost" href="https://www.linkedin.com/in/pau-pascual-vallverdu/" target="_blank" rel="noopener">Linkedin</a>
           </div>
         </div>
         <div class="hero-card">
