Update CV link to point to PDF file

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <p class="lead">Desarrollador Web & Multiplataforma en formación. Apasionado por la programación, la ciberseguridad y las finanzas.</p>
           <p><strong>Ubicación:</strong> Torrelavit, Barcelona • <strong>Edad:</strong> 19 años</p>
           <div class="ctas">
-            <a class="btn" href="CV_Pau_Pascual_Profesional.docx" target="_blank" rel="noopener">Ver CV (PDF)</a>
+            <a class="btn" href="CV.pdf" target="_blank" rel="noopener">Ver CV (PDF)</a>
             <a class="btn ghost" href="https://www.linkedin.com/in/pau-pascual-vallverdu/" target="_blank" rel="noopener">Linkedin</a>
           </div>
         </div>
