Add new project cards for various applications

--- a/index.html
+++ b/index.html
@@ -86,6 +86,24 @@
           <p>Simulación en consola sobre el cuidado virtual de una mascota.</p>
           <p><a class="btn" href="https://github.com/Pasquii4/VirtualPet" target="_blank" rel="noopener">Ver repositorio</a></p>
         </article>
+        <article class="project-card reveal">
+          <h3>Pet Quiz</h3>
+          <p><strong>Tecnologías:</strong> Java.</p>
+          <p>Programa sobre la adopcion de mascotas con un quiz sobre cuanto sabes de ellos.</p>
+          <p><a class="btn" href="https://github.com/Pasquii4/Quiz-Pet" target="_blank" rel="noopener">Ver repositorio</a></p>
+        </article>
+        <article class="project-card reveal">
+          <h3>DayTradingBot</h3>
+          <p><strong>Tecnologías:</strong> Python.</p>
+          <p>El proceso consiste en dos etapas: primero, un programa escanea y selecciona las 50 mejores acciones entre 225 candidatas; después, el day trader analiza esas 50 y elige las mejores opciones para operar.</p>
+          <p><a class="btn" href="https://github.com/Pasquii4/DayTrading" target="_blank" rel="noopener">Ver repositorio</a></p>
+        </article>
+        <article class="project-card reveal">
+          <h3>Asistente Financiero</h3>
+          <p><strong>Tecnologías:</strong> Python.</p>
+          <p>Mi primer trabajo en el sector financiero creando un asistente que analice la accion que quieras.</p>
+          <p><a class="btn" href="https://github.com/Pasquii4/Asistente" target="_blank" rel="noopener">Ver repositorio</a></p>
+        </article>
       </div>
     </section>
 
