--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                             </svg>
                             Conectar
                         </a>
-                        <a href="CV_2.0.pdf" class="btn btn-secondary btn-large" download>
+                        <a href="CV.pdf" class="btn btn-secondary btn-large" download>
                             <svg width="20" height="20" viewBox="0 0 16 16" fill="none">
                                 <path d="M8 11L3 6h3V1h4v5h3l-5 5zM1 14h14v2H1v-2z" fill="currentColor" />
                             </svg>
