--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- Navbar -->
     <header class="navbar">
         <div class="container nav-wrapper">
-            <a href="#" class="brand"><span>$</span>Pau_Pascual</a>
+            <a href="#" class="brand">Pau_Pascual</a>
 
             <button class="hamburger" aria-label="Abrir menú">
                 <span class="bar"></span>
@@ -78,7 +78,7 @@
                     <div class="stat-card">
                         <div class="stat-icon">📦</div>
                         <div class="stat-info">
-                            <h3>Repositorios</h3>
+                            <h3>Repos Públicos</h3>
                             <p class="stat-value" id="github-repos">Cargando...</p>
                         </div>
                     </div>
@@ -217,15 +217,8 @@
                             <span class="tag">Docker</span>
                         </div>
                         <div class="project-links">
-                            <a href="https://github.com/Pasquii4/Trading_Scanner" target="_blank"
-                                rel="noopener noreferrer" class="repo-link">
-                                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                                    stroke-width="2">
-                                    <path
-                                        d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22">
-                                    </path>
-                                </svg>
-                                Repositorio Privado
+                            <a href="javascript:void(0)" class="repo-link disabled">
+                                🔒 Privado · Bajo solicitud
                             </a>
                         </div>
                     </div>
@@ -270,15 +263,8 @@
                             <span class="tag">JavaScript</span>
                         </div>
                         <div class="project-links">
-                            <a href="https://github.com/Pasquii4/bettracker" target="_blank" rel="noopener noreferrer"
-                                class="repo-link">
-                                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                                    stroke-width="2">
-                                    <path
-                                        d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22">
-                                    </path>
-                                </svg>
-                                Repositorio
+                            <a href="javascript:void(0)" class="repo-link disabled">
+                                🔒 Privado · Bajo solicitud
                             </a>
                         </div>
                     </div>
@@ -287,7 +273,10 @@
                     <div class="project-card fade-in">
                         <div class="project-header">
                             <h3 class="project-title">RL Boosting ES</h3>
-                            <span class="badge public">Público</span>
+                            <div style="display: flex; gap: 0.5rem; align-items: center;">
+                                <span class="badge public">Público</span>
+                                <span class="badge live">Live 🟢</span>
+                            </div>
                         </div>
                         <p class="project-desc">Web de servicio de boosting para Rocket League. Enfocado en la alta
                             conversión y el rendimiento.</p>
@@ -306,31 +295,32 @@
                                 </svg>
                                 Ver Código
                             </a>
+                            <a href="https://rlboosting-es.pages.dev/" target="_blank" rel="noopener noreferrer" class="repo-link" style="margin-left: 1rem;">
+                                🌐 Ver Web
+                            </a>
                         </div>
                     </div>
 
                     <!-- 5. Storefront -->
                     <div class="project-card fade-in delay-1">
                         <div class="project-header">
-                            <h3 class="project-title">Storefront</h3>
-                            <span class="badge private">Privado</span>
+                            <h3 class="project-title">Tu Espacio Ideal</h3>
+                            <div style="display: flex; gap: 0.5rem; align-items: center;">
+                                <span class="badge private">Privado</span>
+                                <span class="badge live">Live 🟢</span>
+                            </div>
                         </div>
-                        <p class="project-desc">Tienda online moderna y rápida implementada sobre Astro para maximizar
-                            las métricas Web Vitals, el SEO y asegurar bajas latencias.</p>
+                        <p class="project-desc">Storefront de afiliados Amazon (tag: pasqui09-21) con productos de escritorio aesthetic, desplegado en Cloudflare Workers.</p>
                         <div class="tech-tags">
                             <span class="tag">Astro</span>
                             <span class="tag">SSG</span>
                         </div>
                         <div class="project-links">
-                            <a href="https://github.com/Pasquii4/storefront" target="_blank" rel="noopener noreferrer"
-                                class="repo-link">
-                                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                                    stroke-width="2">
-                                    <path
-                                        d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22">
-                                    </path>
-                                </svg>
-                                Repositorio
+                            <a href="javascript:void(0)" class="repo-link disabled">
+                                🔒 Privado · Bajo solicitud
+                            </a>
+                            <a href="https://storefront.pasqui.workers.dev/" target="_blank" rel="noopener noreferrer" class="repo-link" style="margin-left: 1rem;">
+                                🌐 Ver Web
                             </a>
                         </div>
                     </div>
