feat: add ambient chart video background

--- a/index.html
+++ b/index.html
@@ -82,6 +82,11 @@
 </head>
 
 <body>
+    <!-- Video Background Ambient Chart -->
+    <video autoplay loop muted playsinline id="bg-video">
+        <source src="assets/img/ambient_chart.mp4" type="video/mp4">
+    </video>
+
     <!-- Navbar -->
     <header class="navbar">
         <div class="container nav-wrapper">
