--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#0a0a0f">
     <title>Pau Pascual | FinTech & Full-Stack Developer</title>
 
     <!-- SEO & Social Meta Tags -->
@@ -90,9 +91,9 @@
     <!-- Navbar -->
     <header class="navbar">
         <div class="container nav-wrapper">
-            <a href="#" class="brand">Pau_Pascual</a>
+            <a href="#dashboard" class="brand">Pau_Pascual</a>
 
-            <button class="hamburger" aria-label="Abrir menú">
+            <button class="hamburger" aria-label="Abrir menú" aria-expanded="false">
                 <span class="bar"></span>
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -288,7 +289,7 @@
                     <div class="project-card fade-in delay-1">
                         <div class="project-header">
                             <h3 class="project-title">RL Boosting ES</h3>
-                            <div style="display: flex; gap: 0.5rem; align-items: center;">
+                            <div class="project-badges">
                                 <span class="badge public">Público</span>
                                 <span class="badge live">Live 🟢</span>
                             </div>
@@ -311,7 +312,7 @@
                                 Ver Código
                             </a>
                             <a href="https://rlboosting-es.pages.dev/" target="_blank" rel="noopener noreferrer"
-                                class="repo-link" style="margin-left: 1rem;">
+                                class="repo-link">
                                 🌐 Ver Web
                             </a>
                         </div>
@@ -341,8 +342,8 @@
                     <div class="project-card fade-in">
                         <div class="project-header">
                             <h3 class="project-title">Tu Espacio Ideal</h3>
-                            <div style="display: flex; gap: 0.5rem; align-items: center;">
-                                <span class="badge private">Privado</span>
+                            <div class="project-badges">
+                                <span class="badge public">Público</span>
                                 <span class="badge live">Live 🟢</span>
                             </div>
                         </div>
@@ -353,11 +354,18 @@
                             <span class="tag">SSG</span>
                         </div>
                         <div class="project-links">
-                            <a href="javascript:void(0)" class="repo-link disabled">
-                                🔒 Privado · Bajo solicitud
+                            <a href="https://github.com/Pasquii4/storefront" target="_blank" rel="noopener noreferrer"
+                                class="repo-link">
+                                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                    stroke-width="2">
+                                    <path
+                                        d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22">
+                                    </path>
+                                </svg>
+                                Ver Código
                             </a>
                             <a href="https://storefront.pasqui.workers.dev/" target="_blank" rel="noopener noreferrer"
-                                class="repo-link" style="margin-left: 1rem;">
+                                class="repo-link">
                                 🌐 Ver Web
                             </a>
                         </div>
@@ -416,6 +424,13 @@
                         </div>
                     </div>
 
+                </div>
+
+                <div class="github-cta fade-in">
+                    <a href="https://github.com/Pasquii4?tab=repositories&type=public" target="_blank"
+                        rel="noopener noreferrer" class="btn btn-secondary">
+                        Ver todas las repos públicas en GitHub →
+                    </a>
                 </div>
             </div>
         </section>
