Portfolio major upgrade: fixes, UI, and performance improvements

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preload" as="style"
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=JetBrains+Mono:wght@400;700&family=Space+Grotesk:wght@500;700&display=swap">
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=JetBrains+Mono:wght@400;700&family=Space+Grotesk:wght@500;700&display=swap"
         rel="stylesheet">
@@ -80,6 +82,16 @@
       }
     }
     </script>
+
+    <!-- Noscript Fallback -->
+    <noscript>
+        <style>
+            .fade-in {
+                opacity: 1 !important;
+                transform: none !important;
+            }
+        </style>
+    </noscript>
 </head>
 
 <body>
@@ -279,8 +291,9 @@
                                     <span class="tag">Docker</span>
                                 </div>
                                 <div class="project-links">
-                                    <a href="javascript:void(0)" class="repo-link disabled">
-                                        🔒 Privado · Bajo solicitud
+                                    <a href="mailto:pascualpau04@gmail.com?subject=Solicitud%20acceso%20repo%20Trading%20Scanner"
+                                        class="repo-link" style="opacity: 0.6;">
+                                        🔒 Privado · Solicitar acceso
                                     </a>
                                 </div>
                     </div>
@@ -332,8 +345,9 @@
                             <span class="tag">JavaScript</span>
                         </div>
                         <div class="project-links">
-                            <a href="javascript:void(0)" class="repo-link disabled">
-                                🔒 Privado · Bajo solicitud
+                            <a href="mailto:pascualpau04@gmail.com?subject=Solicitud%20acceso%20repo%20Bet%20Tracker"
+                                class="repo-link" style="opacity: 0.6;">
+                                🔒 Privado · Solicitar acceso
                             </a>
                         </div>
                     </div>
@@ -457,6 +471,11 @@
                         <p>Actualmente <strong>abierto a prácticas o proyectos freelance</strong> en el sector
                             FinTech/trading. Si buscas un perfil técnico con visión de producto, escríbeme directamente.
                         </p>
+                        <div class="lang-badges">
+                            <span class="tag">🇪🇸 Español</span>
+                            <span class="tag">🏴 Català</span>
+                            <span class="tag">🇬🇧 English</span>
+                        </div>
                     </div>
                     <div class="about-image">
                         <img src="assets/img/avatar.png" alt="Pau Pascual" class="avatar" loading="lazy">
@@ -484,7 +503,7 @@
                             pascualpau04@gmail.com
                         </a>
                         <a href="https://www.linkedin.com/in/pau-pascual-vallverdu/" target="_blank"
-                            rel="noopener noreferrer" class="contact-btn linkedin">
+                            rel="me noopener noreferrer" class="contact-btn linkedin">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                 stroke-width="2">
                                 <path
@@ -495,7 +514,7 @@
                             </svg>
                             LinkedIn
                         </a>
-                        <a href="https://github.com/Pasquii4" target="_blank" rel="noopener noreferrer"
+                        <a href="https://github.com/Pasquii4" target="_blank" rel="me noopener noreferrer"
                             class="contact-btn github">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                 stroke-width="2">
