Update stats card to display public repos via API instead of 6 en producción

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                         <div class="stat-icon" aria-hidden="true">📦</div>
                         <div class="stat-info">
                             <h3>Proyectos</h3>
-                            <p class="stat-value">6 en producción</p>
+                            <p class="stat-value" id="github-repos">22 públicos</p>
                         </div>
                     </div>
                     <div class="stat-card">
